[SCB-2625] use clazz.getDeclaredConstructor().newInstance() instead of clazz.newInstance()